src/test/compile-fail/vec-pinned-nocopy-2.rs
// error-pattern: mismatched kind

resource r(b: bool) {
}

fn main() {
    let i = [r(true)];
    i += [r(true)];
}